<resources>
    <string name="app_name">Game Hunt</string>
    <string name="title_activity_registration">Registration</string>

    <!-- INTRO -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next_intro">NEXT</string>
    <string name="skip_intro">SKIP</string>
    <string name="start_intro">GOT IT</string>
    <string name="slide_1_title">Welcome to GameHunt</string>
    <string name="slide_1_desc">The only way to play treasure hunts directly from your smartphone!</string>
    <string name="slide_2_title">Join the Hunt</string>
    <string name="slide_2_desc">Follow us on an exciting adventure created from your own friends!</string>
    <string name="slide_3_title">Create the game</string>
    <string name="slide_3_desc">Starts a new treasure hunt and invite your friends!</string>
    <string name="slide_4_title">Enjoy the GameHunt</string>
    <string name="slide_4_desc">Play with us and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- LOGIN -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="action_sign_in">Login</string>
    <string name="loginFailed">Login failed</string>
    <string name="action_registration">Don\'t you have an account yet? Sign up!</string>
    <string name="action_sign_in2">Already a member? Login</string>
    <string name="continue_reg">Create Account</string>
    <string name="login_error">Invalid credential</string>
    <string name="loginDialog">Authenticating...</string>
    <string name="stageCompleted">Stage Completed</string>
    <string name="huntCompleted">Hunt Completed</string>
    <string name="photoRejected">Photo rejected</string>
    <string name="photoAccepted">Photo accepted</string>

    <!-- REGISTRATION -->
    <string name="reg_username">Username</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_conf_password">Confirm Password</string>
    <string name="reg_error">Username or Email already exists</string>
    <string name="userLength_error">Username too short</string>
    <string name="passLength_error">Password too short</string>
    <string name="confirmpass_error">Password don\'t match</string>
    <string name="emailLength_error">Email too short</string>

    <!-- HUNTLIST -->
    <string name="tab1">Play</string>
    <string name="tab2">Your Hunts</string>
    <string name="tab3">All Hunts</string>
    <string name="title_activity_huntlist">Hunt List</string>
    <string name="welcome1">Join, and buries all opponents</string>
    <string name="welcome2">Choose your hunt and JOIN!</string>
    <string name="welcome3">Play Now! Choose your hunt</string>
    <string name="welcome4">Are you ready for the next hunt?</string>
    <string name="welcome5">Will you be able to find the treasure?</string>
    <string name="goToHunt">GO TO HUNT</string>
    <string name="goToStages">ADD STAGES</string>
    <string name="goToTeams">ADD TEAMS</string>
    <string name="modifyHunt">MODIFY</string>
    <string name="tutorialHuntText1">Create new Hunt</string>
    <string name="tutorialHuntText2">Tap the button to start creating your hunt</string>

    <!-- NEWHUNT ACTIVITY -->
    <string name="nameHunt">Hunt name</string>
    <string name="dateInitHunt">Today</string>
    <string name="timeInitHunt">Start time</string>
    <string name="dateEndHunt">Finish date</string>
    <string name="timeEndHunt">Finish time</string>
    <string name="descHunt">Description (Optional)</string>
    <string name="noNameHunt">Please insert the hunt name</string>
    <string name="noDateHunt">Please insert date and time correctly</string>
    <string name="invalideDateToast">Invalid start date!</string>
    <string name="dateErrorToast">Start date must be more recent than the final</string>
    <string name="timeErrorToast">Please insert at least three hours from start time</string>
    <string name="noStartTimeToast">Please insert a start time</string>
    <string name="photoDesc">Take photo</string>
    <string name="timeDesc">Take your time :)</string>
    <string name="descDesc">Description</string>

    <!-- HUNT ACTIVITY -->
    <string name="clueTitle">Clue</string>
    <string name="clueEmpty">(No clue for this stage)</string>
    <string name="notArrivedToast">There are still to be done about</string>
    <string name="arrivedToast">Well done! You\'re arrived.</string>
    <string name="errorToast">There was an error, please try again.</string>
    <string name="dialogTitle">You must wait!</string>
    <string name="dialogMessage">The hunt will start on</string>
    <string name="dialogTitle1">The hunt is over</string>
    <string name="dialogMessage1">Thanks for playing with us.</string>
    <string name="toastMessage">Image Uploaded</string>
    <string name="toastMessage1">Failed to load</string>
    <string name="winner">YOU WIN</string>
    <string name="loser">YOU LOSE</string>
    <string name="winTeam">The winning team is</string>
    <string name="teamCompHunt">Team has completed the hunt</string>
    <string name="huntComp">Hunt completed!</string>
    <string name="stageComp">Stage completed!</string>
    <string name="waitTeam">Stage completed!</string>
    <string name="waitTeam2">Wait for your team!</string>
    <string name="waitCheck">Wait for moderator check!</string>
    <string name="photoError">Unknown Error. Try to send the photo again.</string>



    <!-- STAGE MANAGEMENT -->
    <string name="maxNumStage">Maximum number of stages reached</string>
    <string name="tutorialStageText1">Create your stage</string>
    <string name="tutorialStageText2">Tap the button to start creating your stage</string>
    <string name="noStageErrorToast">You must insert at least a stage!</string>


    <!-- TEAM MANAGEMENT -->
    <string name="tutorialTeamText1">Create your team</string>
    <string name="tutorialTeamText2">Tap the button to start creating your team</string>
    <string name="maxNumTeam">Maximum number of teams reached</string>
    <string name="namePick">Insert Team Name</string>
    <string name="sloganPick">Insert Slogan</string>
    <string name="dialogOk">OK</string>
    <string name="dialogCancel">Cancel</string>
    <string name="maxTeamToast">Max number of teams reached</string>
    <string name="uknownErrorToast">Unknown error, please try again</string>
    <string name="emptyTeamToast">You can not have empty team!</string>

    <!-- SINGLE TEAM -->
    <string name="maxUsersErrorToast">Maximum number of users for the team reached!</string>
    <string name="addAdminErrorToast">You can not add the user who created the hunt!</string>
    <string name="addAlreadyErrorToast">User already added!</string>
    <string name="notExistErrorToast">This user does not exist</string>
    <string name="sloganTeam">Slogan (Optional)</string>
    <string name="goToTeam">go to team</string>
    <string name="userHint">Invite</string>

    <!-- FRAGMENT_NEWSTAGE -->
    <string name="areaStage">Stage area</string>
    <string name="nameStage">Stage name (Optional)</string>
    <string name="memberStage">Members in goal</string>
    <string name="hintStage">Hint (Optional)</string>
    <string name="reqLocStage">Required Location</string>
    <string name="reqPhotoStage">Required Photo</string>
    <string name="reqCheckStage">Photo Check</string>
    <string name="descr_overflow_button">blabla bla</string>

    <!-- NEW STAGE ACTIVITY -->
    <string name="areaMissinigToast">Missing stage area</string>
    <string name="arriveMissinigToast">Missing arrival point</string>
    <string name="impossibleCombination">impossible to combine these choices</string>
    <string name="photoSendToast">the photo control also requires sending</string>
    <string name="photoCheckDisable">With Photo Check disable you must have the Location</string>

    <!-- MODHUNT -->
    <string name="title_activity_modhunt">Modify Hunt</string>

    <!-- TOOLBARS -->
    <string name="next">NEXT</string>

    <!-- TEAM NAMES -->
    <string name="team1">Team Red</string>
    <string name="team2">Team Blue</string>
    <string name="team3">Team Green</string>
    <string name="team4">Team Yellow</string>
    <string name="team5">Team Orange</string>
    <string name="team6">Team Purple</string>
    <string name="team7">Team Pink</string>
    <string name="team8">Team Brown</string>

    <!-- GALLERY ACTIVITY -->
    <string name="loadPhoto">Loading...</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_newhunt">Nuova Caccia</string>
    <string name="pick_time">Show Time</string>
    <string name="pick_date">Show Date</string>
    <string name="descriptionHunt">Descrizione</string>
    <string name="title_activity_maps">Map</string>
    <string name="clueHunt">Suggerimento (Opzionale)</string>
    <string name="title_activity_hunt">HUNT</string>
    <string name="title_activity_activity_single_team">ActivitySingleTeam</string>
    <string name="action_settings">boooh</string>

</resources>
