<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newhunt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/toolbar_new_hunt"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:maxLength="30"
                    android:maxLines="2"
                    android:theme="@style/NewHuntMenu"
                    android:height="75dp"
                    android:textSize="25sp"
                    android:id="@+id/nameHunt"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:hint="@string/nameHunt"
                    android:textColorHint="@color/colorGray"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_margin="16dp"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false">
                </EditText>

                <ImageButton
                    android:contentDescription="@string/photoDesc"
                    android:id="@+id/newHuntImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_photo_camera_white_24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:adjustViewBounds="false"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp">

                <ImageView
                    android:contentDescription="@string/timeDesc"
                    android:alpha="0.3"
                    android:background="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_query_builder_black_24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:id="@+id/timeNewHunt" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateInitHunt"
                    android:layout_toEndOf="@+id/timeNewHunt"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/dateStartPick"
                    android:onClick="showDatePickerDialog"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeInitHunt"
                    android:layout_marginStart="200dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/timeStartPick"
                    android:onClick="showTimePickerDialog"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateEndHunt"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="60dp"
                    android:id="@+id/dateEndPick"
                    android:onClick="showDatePickerDialog"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeEndHunt"
                    android:layout_marginStart="200dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/timeEndPick"
                    android:onClick="showTimePickerDialog"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <ImageView
                    android:contentDescription="@string/descDesc"
                    android:alpha="0.3"
                    android:background="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_create_black_24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:id="@+id/descrNewHunt" />

                <EditText
                    android:ems="10"
                    android:textColorHint="@color/colorGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/descHunt"
                    android:layout_toEndOf="@+id/descrNewHunt"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/descriptionHunt"
                    android:background="@null"
                    android:elegantTextHeight="false"
                    android:textSize="20sp"
                    android:autoText="false"
                    android:maxLength="300"
                    android:maxLines="5"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.DrawerLayout>
