<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andrea22.gamehunt.RegistrationActivity"
    android:background="@drawable/bg">



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgrect"
        >



    </FrameLayout>


    <RelativeLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in2"
            android:textColor="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="turn_back_login"/>

        />

        <TextView
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="#ffffff"
            android:layout_marginTop="70dp"
            android:textSize="23dp"
            android:layout_centerHorizontal="true" />





        <TextView
            android:id="@+id/registration_regitration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_reg"
            android:textColor="#ffffff"
            android:textSize="19dp"
            android:layout_above="@+id/terms"
            android:padding="16dp"
            android:gravity="center"
            android:background="@drawable/rect"
            android:layout_marginBottom="16dp"
            android:onClick="registration"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="-05dp">

            <EditText
                android:textColor="#fff"
                android:id="@+id/registration_username"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/rect1"
                android:layout_marginTop="180dp"
                android:hint="@string/reg_username"
                android:textColorHint="#ffffff"
                android:paddingLeft="20dp"
                android:drawableLeft="@drawable/user"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:drawablePadding="16dp">
            </EditText>

            <EditText
                android:textColor="#fff"
                android:id="@+id/registration_email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/rect1"
                android:layout_marginTop="20dp"
                android:hint="@string/reg_email"
                android:textColorHint="#ffffff"
                android:drawableLeft="@drawable/email"
                android:paddingLeft="20dp"
                android:drawablePadding="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"

                >
            </EditText>

            <EditText
                android:textColor="#fff"
                android:id="@+id/registration_password"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/rect1"
                android:layout_marginTop="20dp"
                android:hint="@string/reg_password"
                android:textColorHint="#ffffff"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/pass"
                android:paddingLeft="20dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:drawablePadding="16dp">
            </EditText>

            <EditText
                android:textColor="#fff"
                android:id="@+id/registration_phone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/rect1"
                android:layout_marginTop="20dp"
                android:hint="@string/reg_phone"
                android:textColorHint="#ffffff"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/pass"
                android:paddingLeft="20dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:drawablePadding="16dp">
            </EditText>

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>

