<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andrea22.gamehunt.LoginActivity"
    android:background="@color/colorPrimary">


    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <!-- da cancellare-->
            <ProgressBar
                android:id="@+id/spinner"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"/>
            <!--               -->

        </RelativeLayout>

        <TextView
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_registration"
            android:textColor="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="registration"/>

        <TextView
            android:id="@+id/logo"
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:textColor="#ffffff"
            android:background="@drawable/ghlogov2"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
           />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-05dp">

            <Button
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:background="@drawable/button_style"
                android:textColor="#ffffff"
                android:layout_below="@+id/password"
                android:layout_alignParentStart="true"
                android:layout_marginTop="25dp"
                android:layout_alignParentEnd="true"
                android:onClick="login"/>

            <EditText
                android:theme="@style/Theme.App.Base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/username"
                android:ems="10"
                android:id="@+id/username"
                android:paddingLeft="20dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:drawablePadding="16dp"
                android:layout_marginTop="230dp"
                android:textColor="@color/colorA100"
                android:textColorHint="@color/colorA100"
                android:maxLength="30"/>

            <EditText
                android:theme="@style/Theme.App.Base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                android:hint="@string/password"
                android:paddingLeft="20dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:drawablePadding="16dp"
                android:textColor="@color/colorA100"
                android:fontFamily="sans-serif"
                android:singleLine="false"
                android:contextClickable="false"
                android:textColorHint="@color/colorA100"
                android:layout_below="@+id/username"
                android:maxLength="20"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>




